sorted out empty bar for position bar chart

--- a/index.html
+++ b/index.html
@@ -68,12 +68,20 @@
                     <div id="player-by-age"></div>
                 </div>
             </div>
+
+            <!-- PLAYER BY HEIGHT -->
+            <div class="row">
+                <div class="col">
+                    <h3>PLAYERS BY HEIGHT</h3>
+                    <div id="player-by-height"></div>
+                </div>
+            </div>
         </div>
 
     </section>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
     </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJt17tbbPCWd54vyHwh3dYSI_BvNB5V4M&libraries=visualization&callback=initVenuesMap">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJt17tbbPCWd54vyHwh3dYSI_BvNB5V4M&libraries=visualization&callback=initMap">
     </script>
 </body>
 
