added rest of the world pie chart

--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
                 </div>
             </div>
 
+            <!-- PLAYER BY COUNTRY PIE CHART -->
+            <div class="row">
+                <div class="col">
+                    <h3>PLAYERS BY COUNTRY</h3>
+                    <div id="player-country"></div>
+                    <div id="player-other-countries"></div>
+
+                </div>
+            </div>
+
             <!-- PLAYER POSITION -->
             <div class="row">
                 <div class="col">
