changed colours on pie chart

--- a/index.html
+++ b/index.html
@@ -79,19 +79,28 @@
                 </div>
             </div>
 
-            <!-- PLAYER BY HEIGHT -->
+            <!-- PLAYER BY DRAFT YEAR -->
             <div class="row">
                 <div class="col">
-                    <h3>PLAYERS BY HEIGHT</h3>
-                    <div id="player-by-height"></div>
+                    <h3>PLAYERS BY DRAFT YEAR</h3>
+                    <div id="player-by-draft-year"></div>
+                </div>
+            </div>
+
+            <!-- AVERAGE PLAYER CHART -->
+            <div class="row">
+                <div class="col">
+                    <h3>AVERAGE PLAYER CHART</h3>
+                    <div id="average-player"></div>
                 </div>
             </div>
         </div>
 
     </section>
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
     </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJt17tbbPCWd54vyHwh3dYSI_BvNB5V4M&libraries=visualization&callback=initMap">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJt17tbbPCWd54vyHwh3dYSI_BvNB5V4M&libraries=visualization,places&callback=initMap">
     </script>
 </body>
 
