added all logo files

--- a/index.html
+++ b/index.html
@@ -87,13 +87,15 @@
                 </div>
             </div>
 
-            <!-- AVERAGE PLAYER CHART -->
+            <!-- AVERAGE PLAYER WEIGHT -->
             <div class="row">
                 <div class="col">
-                    <h3>AVERAGE PLAYER CHART</h3>
-                    <div id="average-player"></div>
+                    <h3>AVERAGE PLAYER WEIGHT</h3>
+                    <div id="average-weight"></div>
                 </div>
             </div>
+
+
         </div>
 
     </section>
