--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJD5Aw1cD-P4jdl7aCzt8V2PKRMbcQqCU&libraries=visualization,places&callback=initMap">
     </script>
-        <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+        <script src="static/js/markerclusterer.js">
     </script>
 </body>
 
