--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- VENUES MAP -->
             <div class="row">
                 <div class="col">
-                    <h3>VENUES MAP</h3>
+                    <h2>VENUES MAP</h2>
                     <p>The map below indicates the location of the venues for each team of the NBA season 2018/19. Click on each marker to get more information about the venue and the team.</p>
                     <div id="map"></div>
                 </div>
@@ -46,7 +46,7 @@
 
                 <!-- PLAYER POSITION -->
                 <div class="col">
-                    <h3>PLAYERS POSITIONS</h3>
+                    <h2>PLAYERS POSITIONS</h2>
                     <p>This chart distributes the players according to their primary position on the court, the position they normally play as.</p>
                     <p>Shooting Guard (SG) is the most numerous one as it is also the most versatile, these players can usually cover the postions of Point Guard (PG) and Small Forward (SF).</p>
                     <p>Center (C) is the position that has the less number of players as these are the tallest players and this position sometimes is occupied by Power Forward players (PF).</p>
@@ -55,7 +55,7 @@
 
                 <!-- PLAYER BY COUNTRY PIE CHART -->
                 <div class="col">
-                    <h3>PLAYERS BY COUNTRY</h3>
+                    <h2>PLAYERS BY COUNTRY</h2>
                     <p>About 75% of players are American. Even despite the number of players from other countries increasing year by year, especially in the last two decades, these only reach just about a quarter of the total.</p>
                     <p>Los Angeles Lakers is the only team of the 2018/19 season with only American born players in its team roster.</p>
                     <p>Dallas Mavericks is the team with the most variety of nationalities, with players coming from nine different countries and four continents: USA, Tunisia, Latvia, Germany, Canada, Puerto Rico, Australia, Greece and Slovenia.</p>
@@ -66,7 +66,7 @@
             <!-- PLAYER BY OTHER COUNTRIES PIE CHART -->
             <div class="row">
                 <div class="col">
-                    <h3>PLAYERS FROM REST OF THE WORLD</h3>
+                    <h2>PLAYERS FROM REST OF THE WORLD</h2>
                     <p>Despite still being a clear minority when compared to players form the USA, there are players from all continents, and their number have been increasing with the years with more and more being traded in or drafted every year.</p>
                     <p>Europe is still the dominant market for non-American players, but Canada and Australia are the individual countries with more players in the 2018/19 season.</p>
                     <div id="player-other-countries"></div>
@@ -76,9 +76,9 @@
             <!-- PLAYER BY STATE PIE CHART -->
             <div class="row">
                 <div class="col">
-                    <h3>PLAYERS BY STATE (USA and CANADA only)</h3>
-                    <p>There are players from all the US States with the exception of Alaska, Hawaii, Idaho, Maine, Montana, New Mexico, Rhode Island, South Dakota and Vermont.</p>
-                    <p>From the 16 Canadian, players, 13 of them come from the province of Ontario, where the only Canadian team in the League, the Toronto Raptors, are based on.</p>
+                    <h2>PLAYERS BY STATE (USA and CANADA only)</h2>
+                    <p>There are players from the majority of the US States. The only states with no players representing them on the NBA during season 2018/19 are: Alaska, Hawaii, Idaho, Maine, Montana, New Mexico, Rhode Island, South Dakota and Vermont.</p>
+                    <p>From the 16 Canadian, players currently playing in the league, 13 of them come from the province of Ontario, where the only Canadian team in the League, the Toronto Raptors, are based on.</p>
                     <div id="player-state"></div>
                 </div>
             </div>
@@ -86,7 +86,10 @@
             <!-- PLAYER BY AGE -->
             <div class="row">
                 <div class="col">
-                    <h3>PLAYERS BY AGE</h3>
+                    <h2>PLAYERS BY AGE</h2>
+                    <p>The ample majority of players are aged between 20 and 26 years old, being 25 the average age from all players in the league. Due to the high level of physicality of the game, the number of players on their thirties is clearly low when
+                        compared to those on their twenties, number that reduces dramatically for over 35 years old, with only eleven above this age.</p>
+                    <p>Fun fact, there are 39 current players that were not born yet when Vince Carter and Dirk Nowitzki, the two most experienced players in the league, where drafted to play on the NBA back in 1998.</p>
                 </div>
             </div>
 
@@ -123,12 +126,12 @@
                 </div>
             </div>
 
-
-
             <!-- PLAYER BY DRAFT YEAR -->
             <div class="row">
                 <div class="col">
-                    <h3>PLAYERS BY DRAFT YEAR</h3>
+                    <h2>PLAYERS BY DRAFT YEAR</h2>
+                    <p>When talking about basketball, and sports in general, experience is not everything that matters. The most experienced team in the league, the Los Angeles Lakers, did not even got through to the play-offs, finishing the regular season on the 20th postition out of 30 teams.</p>
+                    <p>There are only 13 players on the 2018/19 season with 15 years or more of experience since they were rookies in the league. Curiously, there is no players that were drafted in 1999.</p>
                 </div>
             </div>
 
