finished layout and fixed typos

--- a/index.html
+++ b/index.html
@@ -26,17 +26,18 @@
 
 <body>
     <section>
-
-        <h2>NBA</h2>
+        <!--TITLE-->
+        <div class="header-title">
+            <h1>NBA SEASON 2018/19</h1>
+        </div>
 
         <div class="container">
-
 
             <!-- VENUES MAP -->
             <div class="row">
                 <div class="col">
-                    <h2>VENUES MAP</h2>
-                    <p>The map below indicates the location of the venues for each team of the NBA season 2018/19. Click on each marker to get more information about the venue and the team.</p>
+                    <h2>VENUE LOCATIONS</h2>
+                    <p>The map below indicates the location of the venues for each team of the NBA season 2018/19. Click on each marker to get more information about the venue and the team. Note that the year of foundation refers to when the franchise was first stablished, not necessarily on its current location.</p>
                     <div id="map"></div>
                 </div>
             </div>
@@ -44,19 +45,19 @@
             <!--FIRST ROW-->
             <div class="row">
 
-                <!-- PLAYER POSITION -->
+                <!-- PLAYER POSITION BAR CHART-->
                 <div class="col">
-                    <h2>PLAYERS POSITIONS</h2>
+                    <h2>PLAYERS BY POSITION</h2>
                     <p>This chart distributes the players according to their primary position on the court, the position they normally play as.</p>
-                    <p>Shooting Guard (SG) is the most numerous one as it is also the most versatile, these players can usually cover the postions of Point Guard (PG) and Small Forward (SF).</p>
+                    <p>Shooting Guard (SG) is the most populated one as it is also the most versatile, these players can usually cover the postions of Point Guard (PG) and Small Forward (SF).</p>
                     <p>Center (C) is the position that has the less number of players as these are the tallest players and this position sometimes is occupied by Power Forward players (PF).</p>
                     <div id="player-position"></div>
                 </div>
 
-                <!-- PLAYER BY COUNTRY PIE CHART -->
+                <!-- PLAYER BY COUNTRY DONUT CHART -->
                 <div class="col">
-                    <h2>PLAYERS BY COUNTRY</h2>
-                    <p>About 75% of players are American. Even despite the number of players from other countries increasing year by year, especially in the last two decades, these only reach just about a quarter of the total.</p>
+                    <h2>PLAYERS BY COUNTRY (USA v REST OF THE WORLD)</h2>
+                    <p>About 75% of players are American. Despite the number of players from other countries increasing year by year, especially in the last two decades, these only reach just about a quarter of the total.</p>
                     <p>Los Angeles Lakers is the only team of the 2018/19 season with only American born players in its team roster.</p>
                     <p>Dallas Mavericks is the team with the most variety of nationalities, with players coming from nine different countries and four continents: USA, Tunisia, Latvia, Germany, Canada, Puerto Rico, Australia, Greece and Slovenia.</p>
                     <div id="player-country"></div>
@@ -66,8 +67,8 @@
             <!-- PLAYER BY OTHER COUNTRIES PIE CHART -->
             <div class="row">
                 <div class="col">
-                    <h2>PLAYERS FROM REST OF THE WORLD</h2>
-                    <p>Despite still being a clear minority when compared to players form the USA, there are players from all continents, and their number have been increasing with the years with more and more being traded in or drafted every year.</p>
+                    <h2>PLAYERS FROM THE REST OF THE WORLD</h2>
+                    <p>Despite still being a clear minority when compared to players form the USA, there are players from all continents (except Antarctica), and their number have been increasing with the years with more and more being traded in or drafted every year.</p>
                     <p>Europe is still the dominant market for non-American players, but Canada and Australia are the individual countries with more players in the 2018/19 season.</p>
                     <div id="player-other-countries"></div>
                 </div>
@@ -78,7 +79,7 @@
                 <div class="col">
                     <h2>PLAYERS BY STATE (USA and CANADA only)</h2>
                     <p>There are players from the majority of the US States. The only states with no players representing them on the NBA during season 2018/19 are: Alaska, Hawaii, Idaho, Maine, Montana, New Mexico, Rhode Island, South Dakota and Vermont.</p>
-                    <p>From the 16 Canadian, players currently playing in the league, 13 of them come from the province of Ontario, where the only Canadian team in the League, the Toronto Raptors, are based on.</p>
+                    <p>From the 16 Canadian players currently playing in the league, 13 of them come from the province of Ontario, where the only Canadian team in the League, the Toronto Raptors, are based in.</p>
                     <div id="player-state"></div>
                 </div>
             </div>
@@ -87,9 +88,9 @@
             <div class="row">
                 <div class="col">
                     <h2>PLAYERS BY AGE</h2>
-                    <p>The ample majority of players are aged between 20 and 26 years old, being 25 the average age from all players in the league. Due to the high level of physicality of the game, the number of players on their thirties is clearly low when
-                        compared to those on their twenties, number that reduces dramatically for over 35 years old, with only eleven above this age.</p>
-                    <p>Fun fact, there are 39 current players that were not born yet when Vince Carter and Dirk Nowitzki, the two most experienced players in the league, where drafted to play on the NBA back in 1998.</p>
+                    <p>The ample majority of players are aged between 20 and 26 years old, being 25 the average age from all players in the league. Due to the high level of physicality of the game, the number of players in their thirties is clearly low when
+                        compared to those in their twenties, number that reduces dramatically for over 35 years old, with only eleven players above this age.</p>
+                    <p>Fun fact: there are 39 current players that were not born yet when Vince Carter and Dirk Nowitzki, the two most experienced players in the league, started their careers on the NBA back in 1998.</p>
                 </div>
             </div>
 
@@ -129,8 +130,9 @@
             <!-- PLAYER BY DRAFT YEAR -->
             <div class="row">
                 <div class="col">
-                    <h2>PLAYERS BY DRAFT YEAR</h2>
-                    <p>When talking about basketball, and sports in general, experience is not everything that matters. The most experienced team in the league, the Los Angeles Lakers, did not even got through to the play-offs, finishing the regular season on the 20th postition out of 30 teams.</p>
+                    <h2>PLAYERS BY DRAFT YEAR (AGE v EXPERIENCE)</h2>
+                    <p>When talking about basketball, and sports in general, experience is not everything that matters. The most experienced team in the league, the Los Angeles Lakers, did not even got through to the play-offs, finishing the regular season
+                        on the 20th postition out of 30 teams.</p>
                     <p>There are only 13 players on the 2018/19 season with 15 years or more of experience since they were rookies in the league. Curiously, there is no players that were drafted in 1999.</p>
                 </div>
             </div>
@@ -169,9 +171,7 @@
             </div>
 
         </div>
-        </div>
 
-        </div>
 
     </section>
 
