First draft of readme file added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="static/js/graph.js"></script>
 
 
-    <title>NBA</title>
+    <title>NBA Season 2018/19</title>
 
 </head>
 
@@ -56,7 +56,7 @@
 
                 <!-- PLAYER BY COUNTRY DONUT CHART -->
                 <div class="col">
-                    <h2>PLAYERS BY COUNTRY (USA v REST OF THE WORLD)</h2>
+                    <h2>PLAYERS BY COUNTRY</h2>
                     <p>About 75% of players are American. Despite the number of players from other countries increasing year by year, especially in the last two decades, these only reach just about a quarter of the total.</p>
                     <p>Los Angeles Lakers is the only team of the 2018/19 season with only American born players in its team roster.</p>
                     <p>Dallas Mavericks is the team with the most variety of nationalities, with players coming from nine different countries and four continents: USA, Tunisia, Latvia, Germany, Canada, Puerto Rico, Australia, Greece and Slovenia.</p>
